# help_bot_ai

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  deploy_setup.sh  docker-compose.yml  pyproject.toml
data/: system_prompt.txt
data/knowledge/: .gitkeep
doc/: README.md  conventions.md  product_idea.md  services.md  services_knowledge_base.json  tasklist.md  vision.md  workflow.md
src/: main.py
src/bot/: handlers.py  states.py
src/config/: settings.py
src/knowledge/: search.py
src/llm/: __init__.py  client.py  logger.py
src/payment/: client.py
tests/: test_payment.py
