[project]
name = "help-bot-ai"
version = "0.1.0"
description = "LLM-ассистент для консультации клиентов"
requires-python = ">=3.11"

dependencies = [
    "aiogram>=3.0.0",
    "httpx>=0.24.0", 
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
] 